@@ -5,7 +5,9 @@
    - Disabled some unused web-services: search post, query serialization, 
      collocation base (margaretha)
 11/07/2019
-   - Added cq parameter to VC statistics API and deprecate corpusQuery (margaretha) 
+   - Added cq parameter to VC statistics API and deprecate corpusQuery (margaretha)
+15/07/2019
+   - Added backward compatibility support for corpusQuery parameter (margaretha)    
 
 # version 0.62
 18/03/2019
